--- a/house.gov.by/203355d99f99eb9d37f57fbe5701c4a546004852.yml
+++ b/house.gov.by/203355d99f99eb9d37f57fbe5701c4a546004852.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 14:45:31 GMT
+    - Mon, 23 Oct 2017 16:01:22 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=qd4t8uts6c2r3ribitsdmbus04; path=/
+    - PHPSESSID=nup57059uj9csrn4uqmm3shp21; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 14:45:32 GMT
+recorded_at: Mon, 23 Oct 2017 16:01:23 GMT
