--- a/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
+++ b/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 14:42:16 GMT
+    - Mon, 23 Oct 2017 16:21:06 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=hen8h47fm9md000sepe74i4m05; path=/
+    - PHPSESSID=dpfqkthe28p4ikvghh7hhflld5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 14:42:17 GMT
+recorded_at: Mon, 23 Oct 2017 16:21:07 GMT
