--- a/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
+++ b/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:57:46 GMT
+    - Mon, 23 Oct 2017 16:30:50 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=4bg1hbnvant61539qtij6ap2f4; path=/
+    - PHPSESSID=iqafcv332u8q7uggt708qrj604; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:57:47 GMT
+recorded_at: Mon, 23 Oct 2017 16:30:50 GMT
