--- a/house.gov.by/79ac58f5db031f00c3995cc55eddcd365e200256.yml
+++ b/house.gov.by/79ac58f5db031f00c3995cc55eddcd365e200256.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:07:29 GMT
+    - Mon, 23 Oct 2017 16:35:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=6or2j8imqh62og4o3s41l3lq16; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:07:30 GMT
+recorded_at: Mon, 23 Oct 2017 16:35:51 GMT
