--- a/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
+++ b/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:22:02 GMT
+    - Mon, 23 Oct 2017 16:42:44 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=vu157cjq1j2fr5itm6nqkrkta2; path=/
+    - PHPSESSID=jdgvkgpa0qc9lnfuohae8die63; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:22:03 GMT
+recorded_at: Mon, 23 Oct 2017 16:42:45 GMT
