--- a/house.gov.by/22695d2f418a8e9154938c2b12025487ab02d296.yml
+++ b/house.gov.by/22695d2f418a8e9154938c2b12025487ab02d296.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 14:44:21 GMT
+    - Mon, 23 Oct 2017 16:50:16 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bgbon493t6634eub6isss45bg1; path=/
+    - PHPSESSID=s815mkm01laouc567hr4mf71o2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 14:44:22 GMT
+recorded_at: Mon, 23 Oct 2017 16:50:17 GMT
