--- a/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
+++ b/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 14:59:11 GMT
+    - Mon, 23 Oct 2017 16:54:57 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=idps9ndcvt78c1i8lvtlhuast4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 14:59:11 GMT
+recorded_at: Mon, 23 Oct 2017 16:54:57 GMT
