--- a/house.gov.by/18a60a83bb284d557c25ff9dd36fa7f15d3da0fd.yml
+++ b/house.gov.by/18a60a83bb284d557c25ff9dd36fa7f15d3da0fd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:01:41 GMT
+    - Mon, 23 Oct 2017 16:55:21 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=d208e7llgsc5rj3c8oh5bl57n0; path=/
+    - PHPSESSID=f16qj0sr4609u1aidrj1ot3764; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:01:41 GMT
+recorded_at: Mon, 23 Oct 2017 16:55:21 GMT
