--- a/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
+++ b/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:29:42 GMT
+    - Mon, 23 Oct 2017 16:55:58 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=89efv8p6kehbjs9kigi3e6jjq7; path=/
+    - PHPSESSID=5eq8v6lcbsvet1qauv4125po36; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:29:43 GMT
+recorded_at: Mon, 23 Oct 2017 16:55:58 GMT
