--- a/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
+++ b/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 14:52:07 GMT
+    - Mon, 23 Oct 2017 17:14:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=db36ptd40tchovvqmrso740ul4; path=/
+    - PHPSESSID=v3n8b1q0vfkemb93ddq6pt26g2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 14:52:07 GMT
+recorded_at: Mon, 23 Oct 2017 17:14:46 GMT
