--- a/house.gov.by/f41f444c7a764ed71f281b666413f647e81275cf.yml
+++ b/house.gov.by/f41f444c7a764ed71f281b666413f647e81275cf.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 14:41:07 GMT
+    - Mon, 23 Oct 2017 17:18:00 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=o9d814temba18vok37jmioe8l4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 14:41:07 GMT
+recorded_at: Mon, 23 Oct 2017 17:18:02 GMT
