--- a/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
+++ b/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:20:09 GMT
+    - Mon, 23 Oct 2017 17:28:26 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=ahi8ggvciaevkm1r5v7oo7jh50; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:20:09 GMT
+recorded_at: Mon, 23 Oct 2017 17:28:27 GMT
