--- a/house.gov.by/21b9e23de458f0cc56f922a22b261011eada96c6.yml
+++ b/house.gov.by/21b9e23de458f0cc56f922a22b261011eada96c6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:40:04 GMT
+    - Mon, 23 Oct 2017 17:30:47 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=kunavpbgj2t4hm3c7epd6v2h86; path=/
+    - PHPSESSID=4itkkkkgt92lbocjabau0pip66; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:40:05 GMT
+recorded_at: Mon, 23 Oct 2017 17:30:50 GMT
