--- a/house.gov.by/0890fe2c7ba5e76e3a7d44d01ccfafdba0e5e95d.yml
+++ b/house.gov.by/0890fe2c7ba5e76e3a7d44d01ccfafdba0e5e95d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 15:26:12 GMT
+    - Mon, 23 Oct 2017 17:33:12 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=0foj7ahah3t5r9fghnl1gis725; path=/
+    - PHPSESSID=jo1kjc7vdeu5f9upsfobbicov2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 15:26:13 GMT
+recorded_at: Mon, 23 Oct 2017 17:33:13 GMT
