--- a/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
+++ b/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 12:48:49 GMT
+    - Tue, 24 Oct 2017 04:42:38 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=u2m44vfms55u70mv1fnu2gtbr5; path=/
+    - PHPSESSID=riquqvlrl722g9r95rc7cl60n3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 12:48:50 GMT
+recorded_at: Tue, 24 Oct 2017 04:42:39 GMT
