--- a/house.gov.by/13c3f1d080bb7ffe4718e6690a60210f42f4effb.yml
+++ b/house.gov.by/13c3f1d080bb7ffe4718e6690a60210f42f4effb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 16:18:01 GMT
+    - Tue, 24 Oct 2017 04:46:14 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=qncogf27b66liaotuuk4mbo2m6; path=/
+    - PHPSESSID=mchgp501c3d76hc73akqboelg3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 16:18:02 GMT
+recorded_at: Tue, 24 Oct 2017 04:46:15 GMT
