--- a/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
+++ b/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 16:51:42 GMT
+    - Tue, 24 Oct 2017 04:52:33 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=9ol286m105qf6cchkttutsitg1; path=/
+    - PHPSESSID=jsavrgd70rib49bc8i15u1dvt0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 16:51:43 GMT
+recorded_at: Tue, 24 Oct 2017 04:52:34 GMT
