--- a/house.gov.by/19e6e7e38c36b9903d45df4a99cf37b90e06a361.yml
+++ b/house.gov.by/19e6e7e38c36b9903d45df4a99cf37b90e06a361.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 17:16:06 GMT
+    - Tue, 24 Oct 2017 04:59:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=m2usjs0un161j9mpp6r5gu2qn1; path=/
+    - PHPSESSID=huuh0i37sl328dqfsiorm0l3s3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 17:16:07 GMT
+recorded_at: Tue, 24 Oct 2017 04:59:16 GMT
