--- a/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
+++ b/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 16:23:28 GMT
+    - Tue, 24 Oct 2017 05:10:11 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=ugs0ct465lipqs5seef5c19pm1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 16:23:29 GMT
+recorded_at: Tue, 24 Oct 2017 05:10:11 GMT
