--- a/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
+++ b/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 17:12:12 GMT
+    - Tue, 24 Oct 2017 05:10:37 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=8knc6duthm7dnj79rgtmicrna0; path=/
+    - PHPSESSID=pa6o9aedpqp77drc00nato1ee2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 17:12:14 GMT
+recorded_at: Tue, 24 Oct 2017 05:10:38 GMT
